Toric Blowup Completed

--- a/toric_blowup.ipynb
+++ b/toric_blowup.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "average-capture",
+   "execution_count": 3,
+   "id": "concrete-employer",
    "metadata": {},
    "outputs": [
     {
@@ -33,8 +33,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "excited-clothing",
+   "execution_count": 4,
+   "id": "sharing-channels",
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
        "slicematrix (generic function with 1 method)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,8 +56,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "welcome-shift",
+   "execution_count": 5,
+   "id": "overhead-headset",
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
        "rowMinors (generic function with 1 method)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,8 +86,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "parental-passage",
+   "execution_count": 6,
+   "id": "wound-october",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
        "convertIncidenceMatrix (generic function with 1 method)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,8 +123,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "extensive-swedish",
+   "execution_count": 7,
+   "id": "amazing-ebony",
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
        "coneListFormat (generic function with 1 method)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,34 +158,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "embedded-bristol",
+   "execution_count": 21,
+   "id": "guilty-trinidad",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "toric_blowup (generic function with 2 methods)"
+       "toric_blowup (generic function with 1 method)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "function toric_blowup(s, X, v)\n",
+    "    s = [i + 1 for i in s]\n",
     "    coneList = convertIncidenceMatrix(X.MAXIMAL_CONES)\n",
-    "    \n",
-    "    println(\"coneList: \", coneList)\n",
-    "    \n",
     "    starIndex = findall((t) -> all(((i) -> i in t).(s)), coneList)\n",
-    "    #star = rowMinors(coneList, starIndex)\n",
     "    star = [coneList[i] for i in starIndex]\n",
-    "    \n",
-    "    println(\"star: \", star)\n",
     "    rayMatrix = X.RAYS\n",
-    "    #d = size(rayMatrix, 1) #length of array describing each ray\n",
     "    \n",
     "    lattice = X.HASSE_DIAGRAM\n",
     "    faces = @Polymake.convert_to Array{Set{Int}} lattice.FACES\n",
@@ -193,43 +187,28 @@
     "    clStar = []\n",
     "    for t in star\n",
     "        c = rank(Array(rowMinors(rayMatrix, t))) - 1\n",
-    "        println(\"c: \", c)\n",
     "        rank_c_subcone_indices = @Polymake.convert_to Array{Int} Polymake.graph.nodes_of_rank(lattice,c)\n",
-    "        rank_c_subcones = [faces[i+1] for i in rank_c_subcone_indices]\n",
-    "        append!(clStar, [findall((cone -> all((i -> i in t), cone)), rank_c_subcones)])\n",
-    "        \n",
-    "#         for i in t\n",
-    "#             subcone = convert.(Int64, filter(elt -> elt != i, t))\n",
-    "#             #println(subcone)\n",
-    "#             if rank(Array(rowMinors(rayMatrix, subcone))) == c\n",
-    "#                 append!(clStar, [subcone])\n",
-    "#             end\n",
-    "#         end\n",
+    "        rank_c_subcones = [faces[i + 1] for i in rank_c_subcone_indices]\n",
+    "        for cone in rank_c_subcones\n",
+    "            new_cone = [i+1 for i in cone]\n",
+    "            if all((i -> i in t).(new_cone))\n",
+    "                push!(clStar, new_cone)\n",
+    "            end\n",
+    "        end\n",
     "    end\n",
     "    clStar = unique(clStar)\n",
-    "      \n",
-    "    println(\"clStar: \", clStar)\n",
     "    \n",
     "    n = size(rayMatrix, 1) + 1\n",
-    "    #coneList = filter(t -> !(t in star), coneList)\n",
-    "    #coneList  = rowMinors(coneList, filter(i -> !(i in starIndex), range(1, stop=size(coneList, 1))))\n",
     "    coneList = filter(x -> !(x in star), coneList)\n",
-    "    \n",
-    "    println(\"coneList: \", coneList)\n",
     "    \n",
     "    if length(s) == 1\n",
     "        newCones = []\n",
     "        for t in clStar\n",
     "            if !(s[1] in t)\n",
-    "                 #append!(newCones, [sort(hcat(t..., s...), dims=2)])\n",
     "                push!(newCones, sort(push!(t, s[1])))\n",
     "            end\n",
     "        end\n",
-    "        println(newCones)\n",
-    "         #newCones = convert.(Array{Int64,2}, newCones)\n",
-    "         #println(newCones)\n",
-    "         #println(convert.(Array{Int64,1}, coneList))\n",
-    "        println(append!(coneList, newCones))\n",
+    "        finalCones = [[i - 1 for i in cone] for cone in append!(coneList, newCones)]\n",
     "        return fulton.NormalToricVariety(INPUT_RAYS = Array(X.RAYS), INPUT_CONES = append!(coneList, newCones))\n",
     "    end\n",
     "    newCones = []\n",
@@ -239,22 +218,17 @@
     "        end\n",
     "    end\n",
     "    \n",
-    "    final_rays = [(X.RAYS); v]\n",
-    "    final_cones = append!(coneList, newCones)\n",
+    "    finalRays = [(X.RAYS); v]\n",
+    "    finalCones = [[i - 1 for i in cone] for cone in append!(coneList, newCones)]\n",
     "    \n",
-    "    print(\"rays: \")\n",
-    "    println(final_rays)\n",
-    "    print(\"cones: \")\n",
-    "    println(final_cones)\n",
-    "    \n",
-    "    return fulton.NormalToricVariety(INPUT_RAYS = final_rays, INPUT_CONES = final_cones)\n",
+    "    return fulton.NormalToricVariety(INPUT_RAYS = finalRays, INPUT_CONES = finalCones)\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "disabled-defense",
+   "execution_count": 22,
+   "id": "affecting-lingerie",
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +237,7 @@
        "toric_blowup (generic function with 2 methods)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,36 +250,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "wired-variety",
+   "execution_count": 17,
+   "id": "naked-maryland",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<dl> <dt>type</dt><dd> NormalToricVariety</dd> </dl><details><summary>INPUT_CONES</summary><pre>{0 1}\n",
-       "{1 2}\n",
-       "{2 3}\n",
-       "{0 3}</pre></details>\n",
-       "<details><summary>INPUT_RAYS</summary><pre>0 1\n",
-       "1 0\n",
-       "0 -1\n",
-       "-2 1</pre></details>"
+       "<dl> <dt>type</dt><dd> NormalToricVariety</dd> </dl><details><summary>INPUT_CONES</summary><pre>{0 1}</pre></details>\n",
+       "<details><summary>INPUT_RAYS</summary><pre>1 0\n",
+       "1 2</pre></details>"
       ],
       "text/plain": [
        "type: NormalToricVariety\n",
        "\n",
        "INPUT_CONES\n",
        "\t{0 1}\n",
-       "\t{1 2}\n",
-       "\t{2 3}\n",
-       "\t{0 3}\n",
        "\n",
        "INPUT_RAYS\n",
-       "\t0 1\n",
        "\t1 0\n",
-       "\t0 -1\n",
-       "\t-2 1\n"
+       "\t1 2\n"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tv = fulton.NormalToricVariety(INPUT_RAYS=[1 0; 1 2]; INPUT_CONES=[[0,1]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "offensive-release",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "false"
+      ],
+      "text/plain": [
+       "false"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tv.SMOOTH"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "chicken-seven",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "s:[1, 2]\n",
+      "coneList: [[1, 2]]\n",
+      "star: [[1, 2]]\n",
+      "faces:pm::Array<pm::Set<long, pm::operations::cmp>>\n",
+      "{-1}\n",
+      "{0 1}\n",
+      "{0}\n",
+      "{1}\n",
+      "{}\n",
+      "\n",
+      "c: 1\n",
+      "rank c subcones:Polymake.SetAllocated{Int64}[pm::Set<long, pm::operations::cmp>\n",
+      "{0}, pm::Set<long, pm::operations::cmp>\n",
+      "{1}]\n",
+      "clStar: Any[[1], [2]]\n",
+      "coneList: Array{Int64,1}[]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<dl> <dt>type</dt><dd> NormalToricVariety</dd> </dl><details><summary>INPUT_CONES</summary><pre>{0 2}\n",
+       "{1 2}</pre></details>\n",
+       "<details><summary>INPUT_RAYS</summary><pre>1 0\n",
+       "1 2\n",
+       "1 1</pre></details>"
+      ],
+      "text/plain": [
+       "type: NormalToricVariety\n",
+       "\n",
+       "INPUT_CONES\n",
+       "\t{0 2}\n",
+       "\t{1 2}\n",
+       "\n",
+       "INPUT_RAYS\n",
+       "\t1 0\n",
+       "\t1 2\n",
+       "\t1 1\n"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out = toric_blowup([0,1], tv, [1 1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "gorgeous-iceland",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "true"
+      ],
+      "text/plain": [
+       "true"
       ]
      },
      "execution_count": 20,
@@ -314,103 +385,18 @@
     }
    ],
    "source": [
-    "tv = fulton.NormalToricVariety(INPUT_RAYS=[0 1; 1 0 ; 0 -1; -2 1]; INPUT_CONES=[[0,1],[1,2],[2,3],[0,3]])"
+    "out.SMOOTH"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "enormous-empire",
+   "execution_count": null,
+   "id": "tested-reason",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "coneList: [[1, 2], [2, 3], [3, 4], [1, 4]]\n",
-      "star: [[2, 3]]\n",
-      "c: 1\n",
-      "clStar: Any[[3, 4]]\n",
-      "coneList: [[1, 2], [3, 4], [1, 4]]\n",
-      "rays: pm::Matrix<pm::Rational>\n",
-      "0 1\n",
-      "1 0\n",
-      "0 -1\n",
-      "-1 1/2\n",
-      "1 -1\n",
-      "\n",
-      "cones: [[1, 2], [3, 4], [1, 4], [3, 4, 5]]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<dl> <dt>type</dt><dd> NormalToricVariety</dd> </dl><details><summary>INPUT_CONES</summary><pre>{1 2}\n",
-       "{3 4}\n",
-       "{1 4}\n",
-       "{3 4 5}</pre></details>\n",
-       "<details><summary>INPUT_RAYS</summary><pre>0 1\n",
-       "1 0\n",
-       "0 -1\n",
-       "-1 1/2\n",
-       "1 -1</pre></details>"
-      ],
-      "text/plain": [
-       "type: NormalToricVariety\n",
-       "\n",
-       "INPUT_CONES\n",
-       "\t{1 2}\n",
-       "\t{3 4}\n",
-       "\t{1 4}\n",
-       "\t{3 4 5}\n",
-       "\n",
-       "INPUT_RAYS\n",
-       "\t0 1\n",
-       "\t1 0\n",
-       "\t0 -1\n",
-       "\t-1 1/2\n",
-       "\t1 -1\n"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "toric_blowup([2,3], tv, [1 -1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 113,
-   "id": "genetic-survival",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1×0 LinearAlgebra.Transpose{Any,Array{Any,1}}\n",
-      "1×0 LinearAlgebra.Transpose{Any,Array{Any,1}}\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "pm::Matrix<pm::Rational>\n",
-       "0 1\n",
-       "1 0\n",
-       "0 -1\n",
-       "-1 1/2\n"
-      ]
-     },
-     "execution_count": 113,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "\n",
+    "\n",
     "coneList = convertIncidenceMatrix(tv.MAXIMAL_CONES)\n",
     "starIndex = findall((t) -> all(((i) -> i in t).(s)), coneList)\n",
     "star = rowMinors(coneList, starIndex)\n",
@@ -425,7 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "killing-trash",
+   "id": "terminal-design",
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "focused-cylinder",
+   "id": "sexual-domain",
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "opponent-sleeve",
+   "id": "infrared-broadcasting",
    "metadata": {},
    "outputs": [],
    "source": []
