some testing and bugfixes for helper functions

--- a/makeSimplicialDraft.ipynb
+++ b/makeSimplicialDraft.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "369b7f6d",
    "metadata": {},
    "outputs": [
     {
@@ -28,6 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "efcabf4c",
    "metadata": {
     "scrolled": true
    },
@@ -61,6 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "15eccead",
    "metadata": {},
    "outputs": [
     {
@@ -103,6 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
+   "id": "bb872071",
    "metadata": {},
    "outputs": [
     {
@@ -126,6 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
+   "id": "2163bf07",
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +154,10 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "id": "4f05a38d",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -173,6 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
+   "id": "741c1000",
    "metadata": {
     "scrolled": true
    },
@@ -198,59 +207,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "slicematrix (generic function with 1 method)"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "function slicematrix(A::AbstractMatrix)\n",
-    "    return [A[i, :] for i in 1:size(A,1)]\n",
-    "end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "rowMinors (generic function with 1 method)"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "function rowMinors(A::AbstractMatrix,S::Set)\n",
-    "    outList=[]\n",
-    "    slices=slicematrix(A)\n",
-    "    for i in 1:size(A,1)\n",
-    "        if i in S\n",
-    "            append!(outList,slices[i])\n",
-    "        end\n",
-    "    end\n",
-    "    return transpose(hcat(outList...))\n",
-    "end"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "id": "9a6fa881",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -274,54 +235,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "$2$"
-      ],
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Seems to require cast to generic matrix in order to calculate rank\n",
-    "rank(Matrix(tv.RAYS))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "$2$"
-      ],
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "rank(Matrix(coneRays))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
+   "id": "ea99e8ee",
    "metadata": {},
    "outputs": [
     {
@@ -330,20 +245,21 @@
        "getConeRays (generic function with 1 method)"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "function getConeRays(coneRayIndices, rayMatrix)\n",
-    "    return tv.RAYS[findall(bool -> bool, coneRayIndices),:]\n",
+    "    return convert(Matrix{Int}, tv.RAYS[findall(bool -> bool, coneRayIndices),:])\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "1c2552da",
    "metadata": {},
    "outputs": [
     {
@@ -367,6 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
+   "id": "7de4699d",
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +306,10 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "metadata": {},
+   "id": "e7eed441",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -411,27 +331,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 2, 4]\n",
-      "[1, 2, 4]\n"
-     ]
-    }
-   ],
-   "source": [
-    "a = [1,2,3,4]\n",
-    "println(deleteat!(a, 3))\n",
-    "println(a)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
+   "id": "26721967",
    "metadata": {},
    "outputs": [
     {
@@ -446,6 +347,7 @@
     }
    ],
    "source": [
+    "# Old function, need to replace with new method within the code\n",
     "function getConeFaces(coneRayIndices, rayMatrix)\n",
     "    outCones = []\n",
     "    # We want to find cones with dimension 1 less than the original\n",
@@ -475,6 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "6fec1021",
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +413,7 @@
     "            # Find the first ray that is contained in more than one orbit\n",
     "            # and subdivide at that ray, using toricBlowup\n",
     "            \n",
-    "            # Get faces\n",
+    "            # Get faces (need to replace this)\n",
     "            edges = getConeFaces(badCone, rayMatrix)\n",
     "            # Find the first ray that is contained in more than one orbit\n",
     "            i = 1\n",
@@ -523,29 +426,21 @@
     "        # Repeat this process until there are no more bad cones\n",
     "    end\n",
     "    return Y\n",
-    "end\n",
-    "        "
+    "end"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.5.3",
+   "display_name": "Julia 1.6.0",
    "language": "julia",
-   "name": "julia-1.5"
+   "name": "julia-1.6"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.5.3"
+   "version": "1.6.0"
   }
  },
  "nbformat": 4,
