--- a/BerghAHelpersDraft.ipynb
+++ b/BerghAHelpersDraft.ipynb
@@ -15,6 +15,9 @@
       "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/.julia/environments/v1.6/Manifest.toml`\n",
       "\u001b[32m\u001b[1m   Resolving\u001b[22m\u001b[39m package versions...\n",
       "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/.julia/environments/v1.6/Project.toml`\n",
+      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/.julia/environments/v1.6/Manifest.toml`\n",
+      "\u001b[32m\u001b[1m   Resolving\u001b[22m\u001b[39m package versions...\n",
+      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/.julia/environments/v1.6/Project.toml`\n",
       "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/.julia/environments/v1.6/Manifest.toml`\n"
      ]
     }
@@ -22,7 +25,8 @@
    "source": [
     "import Pkg\n",
     "Pkg.add(\"Oscar\")\n",
-    "Pkg.add(\"Nemo\")"
+    "Pkg.add(\"Nemo\")\n",
+    "Pkg.add(\"Polymake\")"
    ]
   },
   {
@@ -30,79 +34,39 @@
    "execution_count": 11,
    "id": "f62d0358",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error: Cannot load 'Ferret' due to missing binary library\n",
-      "Please run './configure; make' in the 'pkg/ferret' directory\n",
-      "#I  Getting PackageInfo URLs...\n",
-      "#I  Command wget not found\n",
-      "#I  Retrieving PackageInfo.g from https://gap-packages.github.io/ferret/PackageInfo.g ...\n",
-      "#I  Command wget not found\n",
-      "#I  Downloading archive from URL https://github.com/gap-packages/ferret/releases/download/v1.0.5/ferret-1.0.5.tar.gz ...\n",
-      "#I  Command wget not found\n",
-      "#I  Saved archive to /var/folders/pj/dxx83vnn0fjbylvczs09t5zc0000gp/T//tmTrmALr/ferret-1.0.5.tar.gz\n",
-      "#I  Extracting to /Users/somethingmeaningful/.julia/gaproot/v4.11/pkg/ferret-1.0.5 ...\n",
-      "#I  Checking dependencies for ferret...\n",
-      "#I    GAPDoc >= 1.5: true\n",
-      "#I  Command wget not found\n",
-      "#I  Running compilation script on /Users/somethingmeaningful/.julia/gaproot/v4.11/pkg/ferret-1.0.5 ...\n",
-      "#I  Checking dependencies for ferret...\n",
-      "#I    GAPDoc >= 1.5: true\n",
-      "#I  Command wget not found\n",
-      "#I  Package availability test failed\n",
-      "#I  (for ferret 1.0.5)\n",
-      "#I  Removed directory /Users/somethingmeaningful/.julia/gaproot/v4.11/pkg/ferret-1.0.5\n",
-      " -----    -----    -----      -      -----   \n",
-      "|     |  |     |  |     |    | |    |     |  \n",
-      "|     |  |        |         |   |   |     |  \n",
-      "|     |   -----   |        |     |  |-----   \n",
-      "|     |        |  |        |-----|  |   |    \n",
-      "|     |  |     |  |     |  |     |  |    |   \n",
-      " -----    -----    -----   -     -  -     -  \n",
-      "\n",
-      "...combining (and extending) ANTIC, GAP, Polymake and Singular\n",
-      "Version\u001b[32m 0.5.1 \u001b[39m... \n",
-      " ... which comes with absolutely no warranty whatsoever\n",
-      "Type: '?Oscar' for more information\n",
-      "(c) 2019-2021 by The Oscar Development Team\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "using Oscar\n",
-    "using Nemo"
+    "using Nemo\n",
+    "using Polymake"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "fdd9e3f5",
+   "execution_count": 248,
+   "id": "b4a41196",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "$2$"
-      ],
       "text/plain": [
-       "2"
+       "coneMultiplicity (generic function with 1 method)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 248,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "size(intersect([1,2,3], [2,3,4]), 1)"
+    "function coneMultiplicity(a,b)\n",
+    "    return dot(a, [1,1,1,1])\n",
+    "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 252,
    "id": "9a589633",
    "metadata": {},
    "outputs": [
@@ -112,17 +76,18 @@
        "compareCones (generic function with 1 method)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 252,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "function compareCones(cone1, cone2, rayMatrix, distinguished)\n",
-    "    dist1 = size(intersect(cone1, distinguished), 1)\n",
-    "    dist2 = size(intersect(cone2, distinguished), 1)\n",
-    "    if (dist1 - dist2 != 0)\n",
-    "        return dist1 - dist2\n",
+    "    # Calculate the number of non-distinguished rays\n",
+    "    nondist1 = count(cone1) - dot(cone1, distinguished)\n",
+    "    nondist2 = count(cone2) - dot(cone2, distinguished)\n",
+    "    if (nondist1 - nondist2 != 0)\n",
+    "        return nondist1 - nondist2\n",
     "    else\n",
     "        # Need to use the method for calculating multiplicity of cone\n",
     "        mult1 = coneMultiplicity(cone1, rayMatrix)\n",
@@ -134,32 +99,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 253,
    "id": "514cac66",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "maximalCones (generic function with 1 method)"
+       "maximalCones (generic function with 2 methods)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 253,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "function maximalCones(coneList, rayMatrix)\n",
+    "function maximalCones(coneList, rayMatrix, distinguished)\n",
     "    # Finds the maximal cones according to # distinguished rays and multiplicity\n",
-    "    # Initialize\n",
-    "    maxCones = coneList[1:1]\n",
-    "    for cone in coneList\n",
-    "        comp = compareCones(cone, rayMatrix)\n",
+    "    # distinguished is a boolean vector whose size is equal to the number of rays\n",
+    "    # The i-th index is 1 if the i-th ray (in rayMatrix) is distinguished\n",
+    "    maxCones = [coneList[1,:]]\n",
+    "    for i in 2:size(coneList,1)\n",
+    "        cone = coneList[i,:]\n",
+    "        # Compare the cone with the first element of the maximal cone list\n",
+    "        comp = compareCones(cone, maxCones[1], rayMatrix, distinguished)\n",
     "        if (comp > 0)\n",
     "            maxCones = [cone]\n",
     "        elseif (comp == 0)\n",
-    "            append!(maxCones, cone)\n",
+    "            push!(maxCones, cone)\n",
     "        end\n",
     "    end\n",
     "    return maxCones\n",
@@ -168,9 +136,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 254,
+   "id": "b312b201",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2-element Vector{BitVector}:\n",
+       " [1, 1, 0, 0]\n",
+       " [0, 1, 1, 0]"
+      ]
+     },
+     "execution_count": 254,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "maximalCones(coneList, rayMatrix, Bool[0,0,0,1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "1b1b79c2",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -186,7 +181,7 @@
        "(3, [758890 -93990 -12; 316184 -39160 -5; 948503 -117474 -15; -632263 78307 10; -147 18 0; 1 0 0])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,54 +194,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "a4dd1532",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[758890; 316184; 948503; -632263; -147; 1]\n",
-      "[-93990; -39160; -117474; 78307; 18; 0]\n",
-      "[-12; -5; -15; 10; 0; 0]\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in 1:dim\n",
-    "    println(c[:,i])\n",
-    "end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "0b40a9ad",
+   "execution_count": 108,
+   "id": "45cd443d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2×2 Matrix{Int64}:\n",
-       " 2   6\n",
-       " 6  12"
+       "getConeRays (generic function with 1 method)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "[1 2;3 4].*[2 3]"
+    "# Same function as in makeSimplicial\n",
+    "function getConeRays(coneRayIndices, rayMatrix)\n",
+    "    return convert(Matrix{Int}, tv.RAYS[findall(bool -> bool, coneRayIndices),:])\n",
+    "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 162,
    "id": "fab3c6c3",
    "metadata": {},
    "outputs": [
@@ -256,7 +228,7 @@
        "findStackyPoint (generic function with 1 method)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 162,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,20 +241,20 @@
     "    # Returns the first \"red\" lattice point along the given ray\n",
     "    # Given the rays of stackyCone, \\rho_i and \\delta_i, find\n",
     "    # \\psi = a_1 \\rho_1 + ... + b_1 \\delta_1 + ... + b_n \\delta_n\n",
-    "    # and return a_1, ..., b_1, ..., b_n\n",
+    "    # and return a_1, ..., b_1, ..., b_n, and the multiple of ray\n",
     "    \n",
     "    # Apply stacky structure\n",
-    "    rays = getConeRays(cone, rayMatrix) .* stack\n",
+    "    rays = getConeRays(cone, rayMatrix) .* transpose(stack)\n",
     "    # Find integer solutions\n",
     "    M = hcat(rays, ray)\n",
     "    S = MatrixSpace(ZZ, size(M,1), size(M,2))\n",
-    "    nullspace(S(M))\n",
-    "    (dim, c) = nullspace(hcat(rays))\n",
+    "    (dim, c) = nullspace(S(M))\n",
     "    # Get smallest integer multiple\n",
     "    coef = nothing\n",
-    "    for col in 1:size(c,1)\n",
-    "        if (col[size(col,1)] != 0)\n",
-    "            coef = col[1:size(col,1)-1]\n",
+    "    for col in 1:size(c, 2)\n",
+    "        if (c[size(c, 1), col] != 0)\n",
+    "            coef = vec(Matrix{Int}(transpose(c[1:size(c,1), col]) * sign(-c[size(c, 1), col])))\n",
+    "            coef[size(coef, 2)] = abs(coef[size(coef, 2)])\n",
     "        end\n",
     "    end\n",
     "    # Return the coefficients of the rays of the cone, in the same order\n",
@@ -292,8 +264,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "id": "df493583",
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<dl> <dt>type</dt><dd> NormalToricVariety</dd> </dl><details><summary>INPUT_CONES</summary><pre>{0 1}\n",
+       "{1 2}\n",
+       "{2 3}\n",
+       "{0 3}</pre></details>\n",
+       "<details><summary>INPUT_RAYS</summary><pre>0 1\n",
+       "1 0\n",
+       "0 -1\n",
+       "-2 1</pre></details>"
+      ],
+      "text/plain": [
+       "type: NormalToricVariety\n",
+       "\n",
+       "INPUT_CONES\n",
+       "\t{0 1}\n",
+       "\t{1 2}\n",
+       "\t{2 3}\n",
+       "\t{0 3}\n",
+       "\n",
+       "INPUT_RAYS\n",
+       "\t0 1\n",
+       "\t1 0\n",
+       "\t0 -1\n",
+       "\t-2 1\n"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tv = fulton.NormalToricVariety(INPUT_RAYS=[0 1; 1 0; 0 -1; -2 1]; INPUT_CONES=[[0,1],[1,2],[2,3],[0,3]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "8ac14c3a",
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4-element BitVector:\n",
+       " 1\n",
+       " 1\n",
+       " 0\n",
+       " 0"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cone = tv.MAXIMAL_CONES[1,:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "32db64d6",
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pm::Matrix<pm::Rational>\n",
+       "0 1\n",
+       "1 0\n",
+       "0 -1\n",
+       "-1 1/2\n"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rayMatrix = tv.RAYS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "id": "4e975492",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "[$3$, $2$, $-6$]"
+      ],
+      "text/plain": [
+       "3-element Vector{Int64}:\n",
+       "  3\n",
+       "  2\n",
+       " -6"
+      ]
+     },
+     "execution_count": 163,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Should output 6, the first red point along [1,1], 3,2\n",
+    "coef = findStackyPoint([1,1], cone, rayMatrix, [2,3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a2f17be5",
    "metadata": {},
    "outputs": [],
    "source": []
